# demo

./: .gitignore  PROGRESS.md
client/: settings.gradle
client/app/: build.gradle
client/app/src/main/: AndroidManifest.xml
client/app/src/main/java/com/demo/lanclient/: MainActivity.kt  MainViewModel.kt
client/app/src/main/java/com/demo/lanclient/network/: WebSocketManager.kt
client/app/src/main/java/com/demo/lanclient/service/: NetworkScanService.kt
client/app/src/main/res/drawable/: ic_notification.xml
client/app/src/main/res/layout/: activity_main.xml
client/app/src/main/res/values/: colors.xml  strings.xml
server/: Cargo.toml
server/.cargo/: config.toml
server/src/: main.rs
server/static/: index.html
